blurr fix

--- a/src/assets/Styles/login-page.scss
+++ b/src/assets/Styles/login-page.scss
@@ -1,10 +1,22 @@
 .background {
   width: 100%;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #09131d 100%);
 }
+.blurr {
+  position: absolute;
+  width: 376px;
+  height: 812px;
+  left: -1px;
+  top: 0px;
 
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    #c7e3ff73 100%
+  );
+}
 .frame {
   position: absolute;
-  height: 100%;
 }
 .login-title {
   position: absolute;
